--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
 body{
     background-color: #181818;
 }
+.page {
+    padding: 40px;
+    color: white;
+    font-family: 'Vazirmatn', sans-serif;
+  }
+  
