--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -12,6 +12,7 @@
   left: 0;
   position: fixed;
   top: 0;
+  z-index: 9999999;
 
   &__logo {
     font-size: 24px;
@@ -69,5 +70,9 @@
         color: #4daafc;
       }
     }
+  }
+  a{
+    text-decoration: none;
+    color: white;
   }
 }
